--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,5 +1,6 @@
-<div>
-  <h2>{{ title }} app is running!</h2>
-</div>
-<app-value></app-value>
-<router-outlet></router-outlet>
+<app-nav></app-nav>
+
+<h2>Dating App</h2>
+
+<!-- <app-value></app-value> -->
+<!-- <router-outlet></router-outlet> -->
