--- a/DatingAppSpa/src/app/nav/nav.component.html
+++ b/DatingAppSpa/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
       <button
@@ -14,13 +14,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Dating App</a>
+      <a class="navbar-brand" [routerLink]="['/home']">Dating App</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li><a href="">Matches</a></li>
-        <li><a href="">Lists</a></li>
-        <li><a href="">Messages</a></li>
+      <ul class="nav navbar-nav" *ngIf="loggedIn()">
+        <li><a [routerLink]="['/members']">Matches</a></li>
+        <li><a [routerLink]="['/lists']">Lists</a></li>
+        <li><a [routerLink]="['/messages']">Messages</a></li>
       </ul>
       <form
         *ngIf="!loggedIn()"
@@ -61,17 +61,15 @@
 
       <ul *ngIf="loggedIn()" class="nav navbar-nav navbar-right">
         <li><a (click)="logout()">Logout</a></li>
-        <li class="dropdown">
+        <li class="dropdown" dropdown>
           <a
             href="#"
             class="dropdown-toggle"
             data-toggle="dropdown"
-            role="button"
-            aria-haspopup="true"
-            aria-expanded="false"
+            dropdownToggle
             >Welcome User <span class="caret"></span
           ></a>
-          <ul class="dropdown-menu">
+          <ul class="dropdown-menu" *dropdownMenu>
             <li>
               <a href="#"> <i class="fa fa-user"></i>Edit Profile</a>
             </li>
@@ -87,6 +85,7 @@
 </nav>
 
 <!-- <pre>
+  Welcome {{ authService.decodedToken?.unique_name }}
   Form Valid: {{ loginForm.valid }}
   Form Touched: {{ loginForm.touched }}
   Form Dirty: {{ loginForm.dirty }}
