--- a/DatingAppSpa/src/app/home/home.component.html
+++ b/DatingAppSpa/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div style="text-align: center">
+<div style="text-align: center" *ngIf="!registerMode">
   <h1>Find your match!</h1>
   <p class="lead">
     Come on in to view your matches.. All you need to do is sign in!
