--- a/DatingAppSpa/src/app/members/member-detail/member-detail.component.html
+++ b/DatingAppSpa/src/app/members/member-detail/member-detail.component.html
@@ -17,15 +17,15 @@
           </div>
           <div>
             <strong>Age:</strong>
-            <p>{{ user.agey }}</p>
+            <p>{{ user.age }}</p>
           </div>
           <div>
             <strong>Last Active:</strong>
-            <p>{{ user.lastActive }}</p>
+            <p>{{ user.lastActive | timeAgo }}</p>
           </div>
           <div>
             <strong>Member Since:</strong>
-            <p>{{ user.created }}</p>
+            <p>{{ user.created | date: "mediumDate" }}</p>
           </div>
           <div class="panel-footer">
             <div class="btn-group-justified">
